# webtronics_tasks

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: dependencies.py
app/api/endpoints/: likes.py  posts.py  users.py
app/core/: config.py  database.py  security.py
app/db/cruds/: likes.py  posts.py  users.py
app/db/models/: likes.py
migrations/: env.py
migrations/versions/: 7792c8aeba6e_add_likes_and_dislikes_tables.py  d5f540524f29_add_posts_table.py.py
